--- a/package.json
+++ b/package.json
@@ -6,11 +6,9 @@
   "scripts": {
     "build-server": "NODE_ENV=development ./node_modules/.bin/webpack -w --config webpack.server.js",
     "start-server": "nodemon server/build/app.js",
+    "build-client": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.pro.config.js",
     "start-client": "./node_modules/.bin/webpack-dev-server --hot --open --config webpack.dev.config.js",
-    "server": "nodemon koaserver/index.js",
-    "build-dll": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dll.config.js",
-    "build-client": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack --config webpack.dev.config.js -w",
-    "build-pro": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dll.config.js"
+    "build-dll": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack --config webpack.dll.config.js"
   },
   "repository": {
     "type": "git",
